force-app/main/default/objects/sked__Job_Task__c/sked__Job_Task__c.object-meta.xml
<CustomObject>
    <label>Job Task</label>
    <nameField>
        <label>Job Task Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Job Tasks</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>