force-app/main/default/objects/sked__Job_Task__c/fields/sked__Description__c.field-meta.xml
<CustomField>
    <fullName>sked__Description__c</fullName>
    <label>Description</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>