force-app/main/default/objects/sked__Job_Task__c/fields/sked__Seq__c.field-meta.xml
<CustomField>
    <fullName>sked__Seq__c</fullName>
    <label>Seq</label>
    <precision>18</precision>
    <required>true</required>
    <scale>0</scale>
    <type>Number</type>
</CustomField>